feat: complete crud tickets and banners
