# src/routes/api.ts
@@ -18,35 +18,127 @@ router.post("/auth/login", authController.login);
 router.get("/auth/me", authMiddleware, authController.me);
 router.post("/auth/activation", authController.activation);
 
+router.post(
+  "/banners",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  bannerController.create
+  /*
+  #swagger.tags = ['Banner'],
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  #swagger.requestBody = {
+    required: true,
+    schema:{
+      $ref: '#/components/schemas/CreateBannerRequest'}
+  */
+);
+router.get(
+  "/banners",
+  bannerController.findAll
+  /*
+   #swagger.tags = ['Banners'],
+   */
+);
+router.get(
+  "/banners/:id",
+  bannerController.findOne
+  /*
+   #swagger.tags = ['Banners'],
+   */
+);
+router.put(
+  "/banners/:id",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  bannerController.update
+  /*
+  #swagger.tags = ['Banners'],
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  #swagger.requestBody = {
+    required: true,
+    schema:{
+      $ref: '#/components/schemas/CreateBannerRequest'}
+  */
+);
+router.delete(
+  "/banners/:id",
+  [authMiddleware, aclMiddleware([ROLES.ADMIN])],
+  bannerController.remove
+  /*
+  #swagger.tags = ['Banners'],
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  */
+);
 
-
-router.post("/banners", [authMiddleware, aclMiddleware([ROLES.ADMIN])], bannerController.create);
-router.get("/banners", bannerController.findAll);
-router.get("/banners/:id", bannerController.findOne);
-router.put("/banners/:id", [authMiddleware, aclMiddleware([ROLES.ADMIN])], bannerController.update);
-router.delete("/banners/:id", [authMiddleware, aclMiddleware([ROLES.ADMIN])], bannerController.remove);
-
-
-
-router.post("/tickets",
+router.post(
+  "/tickets",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.create
+  /*
+  #swagger.tags = ['Tickets'],
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  #swagger.requestBody = {
+    required: true,
+    schema:{
+      $ref: '#/components/schemas/CreateTicketRequest'}
+  */
 );
-router.get("/tickets", ticketController.findAll);
-router.get("/tickets/:id", ticketController.findOne);
-router.put("/tickets/:id",
+router.get(
+  "/tickets",
+  ticketController.findAll
+  /*
+  #swagger.tags = ['Tickets']
+  */
+);
+router.get(
+  "/tickets/:id",
+  ticketController.findOne
+  /*
+  #swagger.tags = ['Tickets']
+  */
+);
+router.put(
+  "/tickets/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.update
+  /*
+  #swagger.tags = ['Tickets'],
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  #swagger.requestBody = {
+    required: true,
+    schema:{
+      $ref: '#/components/schemas/CreateTicketRequest'}
+  */
 );
-router.delete("/tickets/:id",
+router.delete(
+  "/tickets/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   ticketController.remove
+  /*
+  #swagger.tags = ['Tickets'],
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  */
 );
-router.get("/tickets/:eventId/events", ticketController.findAllByEvent);
+router.get(
+  "/tickets/:eventId/events",
+  ticketController.findAllByEvent
+  /*
+  #swagger.tags = ['Tickets']
+  */
+);
 
-
-
-router.post("/category",
+router.post(
+  "/category",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   categoryController.create
   /*
@@ -60,19 +152,22 @@ router.post("/category",
       $ref: '#/components/schemas/CreateCategoryRequest'}
   */
 );
-router.get("/category",
+router.get(
+  "/category",
   categoryController.findAll
   /*
   #swagger.tags = ['Category'],
   */
 );
-router.get("/category/:id",
+router.get(
+  "/category/:id",
   categoryController.findOne
   /*
   #swagger.tags = ['Category'],
   */
 );
-router.put("/category/:id",
+router.put(
+  "/category/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   categoryController.update
   /*
@@ -87,7 +182,8 @@ router.put("/category/:id",
   }
   */
 );
-router.delete("/category/:id",
+router.delete(
+  "/category/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   categoryController.remove
   /*
@@ -98,9 +194,8 @@ router.delete("/category/:id",
   */
 );
 
-
-
-router.post("/events",
+router.post(
+  "/events",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   eventController.create
   /*
@@ -115,19 +210,22 @@ router.post("/events",
   }
   */
 );
-router.get("/events",
+router.get(
+  "/events",
   eventController.findAll
   /*
   #swagger.tags = ['Events'],
   */
 );
-router.get("/events/:id",
+router.get(
+  "/events/:id",
   eventController.findOne
   /**
   #swagger.tags = ['Events'],
    */
 );
-router.put("/events/:id",
+router.put(
+  "/events/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   eventController.update
   /*
@@ -142,7 +240,8 @@ router.put("/events/:id",
   }
   */
 );
-router.delete("/events/:id",
+router.delete(
+  "/events/:id",
   [authMiddleware, aclMiddleware([ROLES.ADMIN])],
   eventController.remove
   /*
@@ -152,55 +251,59 @@ router.delete("/events/:id",
   }]
    */
 );
-router.get("/events/:slug/slug",
+router.get(
+  "/events/:slug/slug",
   eventController.findOneBySlug
   /*
   #swagger.tags = ['Events'],
   */
 );
 
-
-
-router.get("/regions",
+router.get(
+  "/regions",
   regionController.getAllProvinces
   /*
   #swagger.tags = ['Regions']
   */
 );
-router.get("/regions/:id/province",
+router.get(
+  "/regions/:id/province",
   regionController.getProvince
   /*
   #swagger.tags = ['Regions']
   */
 );
-router.get("/regions/:id/regency",
+router.get(
+  "/regions/:id/regency",
   regionController.getRegency
   /*
   #swagger.tags = ['Regions']
   */
 );
-router.get("/regions/:id/district",
+router.get(
+  "/regions/:id/district",
   regionController.getDistrict
   /*
   #swagger.tags = ['Regions']
   */
 );
-router.get("/regions/:id/village",
+router.get(
+  "/regions/:id/village",
   regionController.getVillage
   /*
   #swagger.tags = ['Regions']
   */
 );
-router.get("/regions-search",
+router.get(
+  "/regions-search",
   regionController.findByCity
   /*
   #swagger.tags = ['Regions']
   */
 );
 
-
-
-router.post("/media/upload-single",
+router.post(
+  "/media/upload-single",
   [
     authMiddleware,
     aclMiddleware([ROLES.ADMIN, ROLES.MEMBER]),
@@ -231,7 +334,8 @@ router.post("/media/upload-single",
   */
 );
 
-router.post("/media/upload-multiple",
+router.post(
+  "/media/upload-multiple",
   [
     authMiddleware,
     aclMiddleware([ROLES.ADMIN, ROLES.MEMBER]),
@@ -265,7 +369,8 @@ router.post("/media/upload-multiple",
   */
 );
 
-router.delete("/media/remove",
+router.delete(
+  "/media/remove",
   [authMiddleware, aclMiddleware([ROLES.ADMIN, ROLES.MEMBER])],
   mediaController.remove
   /*
@@ -281,7 +386,5 @@ router.delete("/media/remove",
   }
   */
 );
-
-
 
 export default router;
